--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-  background-image: url("../images/black.jpg")
+  background-image: url("../images/black.jpg");
 }
 
 #page-wrapper {
   width: 960px;
   margin: 0 auto;
-  box-shadow: 0px 4px 8px 2px rgba(0,0,0, 1);
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
   border-radius: 12px 12px 0px 0px;
 }
 
@@ -18,7 +18,7 @@ body {
 #header h1 {
   position: absolute;
   left: 420px;
-  top: 5px;
+  top:5px;
   font-size: 3em;
   font-family: 'Devonshire', cursive;
   color: #E35335;
@@ -33,7 +33,7 @@ body {
 #header #toplink {
   text-decoration: none;
   position: absolute; 
-  top: 34px;
+  top:-34px;
   right: 10px;
   color: white;
   font-size: 1.8em;
@@ -90,7 +90,7 @@ h2 strong {
   padding: 0;
   float: left;
   position: relative;
-  left: 50%;
+  left:50%;
 }
 
 #main-nav ul li {
